# xiaomi_bridge

./: CMakeLists.txt  README.md  package.xml
config/: dwa_local_planner_params.yaml  robot_config.yaml  xiaomi_nav.rviz  xiaomi_navigation.yaml
config/old/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml
include/xiaomi_bridge/: xiaomi_player_interface.h  xiaomi_topic_handler.h
launch/: bringup.launch  move_base.launch  navigation.launch  rviz.launch  xiaomi_bringup.launch.py  xiaomi_cartographer.launch.py  xiaomi_navigation.launch.py  xiaomi_robot_state.launch.py
launch/old/: bringup.launch  rviz.launch
map/: test.yaml
param/: robot_config.yaml
patches/: player.patch
rviz/: xiaomi_cartographer.rviz  xiaomi_nav.rviz  xiaomi_navigation.rviz
src/: xiaomi_bridge_node.cpp  xiaomi_player_interface.cpp  xiaomi_topic_handler.cpp
urdf/: xiaomi_gen1.urdf
