<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xiaomi_bridge</name>
  <version>0.0.1</version>
  <description>The xiaomi_bridge package</description>

  <maintainer email="arne@todo.todo">arne</maintainer>
  <license>GPLv2</license>
  <author>Arne Hitzmann</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>  
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
